--- a/index.html
+++ b/index.html
@@ -227,8 +227,17 @@
               </a>
             </div>
           </div>
+          <br>
+          <p class="about">Бердянск находится на удивительной земле, где степь встречается с морем, где официальная история начинается с 1827 года, а неофициальная - помнит еще скифские племена и хранит эту память в виде курганов и каменных баб. Сердце Бердянска - конечно, Приморская площадь. Летом она многолюдная, пестрая и шумная. Каждый метр Приморской площади так или иначе развлекает и завлекает отдыхающих.<br>
+          Главная достопримечательность города - Азовское море. Пляжей в Бердянске много, начиная от Центрального, в который упирается Приморская площадь, и заканчивая пляжами Бердянской косы. Помимо моря, сердца отдыхающих в Бердянске покоряют разные забавные памятники, созданные городской администрацией в последние 15 лет. Есть здесь памятники граблям, детству, бычку-кормильцу, зависти, дачникам, курортникам, сантехнику... Всех, пожалуй, не вспомнить. Каждый турист просто обязан сделать несколько фото с местными памятниками.
+          В каждом городе можно найти миллион недостатков. Есть они и в Бердянске. НО стоит ли на них обращать внимание, когда вы наслаждаетесь теплым морем и прекрасной погодой во время своего отпуска.</p>
+          <video src="source/video/summer-in-berdyansk.mp4" width="500" height="450" controls poster="source/img/berdyansk/observation-wheel.jpg"></video>
+          <br>
+          <video src="source/video/types-of-berdyansk.mp4" width="500" height="450" controls poster="source/img/berdyansk/sea.jpg"></video>
         </section>
         <section>
+          <br>
+          <h2>Контакты</h2>
           <br>
           <iframe width="1300" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=16&center=46.7585,36.7749&key=AIzaSyAsJElprfG-u-nle_Kni3M4IZhWNJFRR7k" allowfullscreen>
           </iframe>
