--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
       </article>
       <h2 class="title">Номера</h2>
       <section class="section-rooms">
-        <a href="#" class="rooms-container">
+        <a href="#" class="rooms-container-lux">
           <img class="rooms-img" src="source/img/lux/lobby.jpg" alt="Одна из комнат">
           <h3>Люкс</h3>
-          <p>Номер находится на первом этаже.<br> Рассчитан на трех - четырех человек.<br>
+          <p class="rooms-container-lux-text">Номер находится на первом этаже.<br> Рассчитан на трех - четырех человек.<br>
              В номере есть одна двухспальная кровать,<br> две односпальные.
              Санузел внутри (душ+туалет).<br>
              Так же допольнительно холодильник,<br>телевизор, кондиционер.</p>
         </a>
-        <a href="#" class="rooms-container">
+        <a href="#" class="rooms-container-semilux">
           <img class="rooms-img" src="source/img/semilux-room/room.jpg" alt="Основной вид">
           <h3>Полулюкс</h3>
           <p>Номер находится на первом этаже.<br> Рассчитан на двух - трех  человек.<br>
@@ -129,7 +129,7 @@
              Так же допольнительно холодильник, телевизор.<br> Возле номера есть личная
              терраса. </p>
         </a>
-        <a href="#" class="rooms-container">
+        <a href="#" class="rooms-container-ordinary">
           <img class="rooms-img" src="source/img/standart-room/ordinary.jpg" alt="Часть комнаты">
           <h3>Стандарт</h3>
           <p>Номер находится на втором этаже.<br> Рассчитан на двух человек.<br>
@@ -234,7 +234,7 @@
         </div>
       </section>
       <section class="section-contact">
-        <h2 class="title">Контакты</h2>
+        <h2 class="title-footer">Контакты</h2>
         <div id="contact">
           <div class="map-berd">
             <iframe class="map" src="https://www.google.com/maps/embed/v1/view?zoom=16&center=46.7585,36.7749&key=AIzaSyAsJElprfG-u-nle_Kni3M4IZhWNJFRR7k" allowfullscreen>
@@ -269,9 +269,9 @@
       </section>
   </main>
   <footer>
-    <section>
-      Copyright © 2017 Все права защищены.
-    </section>
+    <div class="footer">
+      Copyright © Пансион "100 шагов" 2017 Все права защищены.
+    </div>
   </footer>
   <!-- Latest compiled and minified JavaScript -->
   <script src="js/jquery-3.1.1.min.js"></script>
