Added more changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
 
       <!-- Optional theme -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -111,26 +112,32 @@
         <h2 class="title" id="rooms">Номера</h2>
       </div>
       <section class="section-rooms">
-        <a href="#" class="rooms-container-lux link">
+        <a href="#" class="rooms-container link">
           <img class="rooms-img" src="source/img/lux/lobby.jpg" alt="Одна из комнат">
           <h3>Люкс</h3>
-          <p class="rooms-container-lux-text">Номер находится на первом этаже.<br> Рассчитан на трех - четырех человек.<br>
-             В номере есть одна двухспальная кровать,<br> две односпальные.
-             Санузел внутри (душ+туалет).<br>Дополнительно холодильник,<!--  телевизор, кондиционер -->.</p>
+          <div class="category-description">
+            <div>
+              <p>Номер находится на первом этаже. Рассчитан на трех - четырех человек. В номере есть одна двухспальная кровать, две односпальные. Санузел внутри (душ+туалет). Дополнительно холодильник, телевизор, кондиционер.</p>
+            </div>
+          </div>
         </a>
-        <a href="#" class="rooms-container-semilux link">
+        <a href="#" class="rooms-container link">
           <img class="rooms-img" src="source/img/semilux-room/room.jpg" alt="Основной вид">
           <h3>Полулюкс</h3>
-          <p>Номер находится на первом этаже.<br> Рассчитан на двух - трех  человек.<br>
-             В номере есть три односпальные кровати.<br> Санузел внутри (душ+туалет).<br>
-             Так же допольнительно холодильник, телевизор.<br> <!-- Возле номера есть личная
-             терраса. --> </p>
+          <div class="category-description">
+           <div>
+             <p>Номер находится на первом этаже. Рассчитан на двух - трех человек. В номере есть три односпальные кровати. Санузел внутри (душ+туалет). Так же допольнительно холодильник, телевизор. Возле номера есть личнаятерраса.</p>
+            </div>
+          </div>
         </a>
-        <a href="#" class="rooms-container-ordinary link">
+        <a href="#" class="rooms-container link">
           <img class="rooms-img" src="source/img/standart-room/ordinary.jpg" alt="Часть комнаты">
           <h3>Стандарт</h3>
-          <p>Номер находится на втором этаже.<br> Рассчитан на двух человек.<br>
-            В номере есть две односпальные кровати.<br> Так же в номере есть телевизор,<br> вентилятор, тумбочка. На этаже холодильник, микроволновка.<br> <!-- Санузел общий, находится на улице (душ+туалет). --></p>
+          <div class="category-description">
+            <div>
+              <p>Номер находится на втором этаже. Рассчитан на двух человек. В номере есть две односпальные кровати. Так же в номере есть телевизор, вентилятор, тумбочка. На этаже холодильник, микроволновка. Санузел общий, находится на улице (душ+туалет).</p>
+            </div>
+          </div>
         </a>
       </section>
       <br>
@@ -231,7 +238,7 @@
         </div>
       </section>
       <section class="section-contact">
-        <h2 id="contact" class="title-footer">Контакты</h2>
+        <h2 id="contact" class="contacts-title">Контакты</h2>
         <div id="contact-form">
           <div class="map-berd">
             <iframe class="map" src="https://www.google.com/maps/embed/v1/view?zoom=16&center=46.7585,36.7749&key=AIzaSyAsJElprfG-u-nle_Kni3M4IZhWNJFRR7k" allowfullscreen>
