--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -127,8 +128,8 @@
           <a href="#" class="thumbnail">
             <img src="source/img/lux/lobby.jpg" alt="Люкс">
             <div class="caption">
-              <h3>Люкс</h3>
-              <p>Номер находится на первом этаже. Рассчитан на трех - четырех человек. В номере есть одна двухспальная кровать, две односпальные. Санузел внутри (душ+туалет). Дополнительно холодильник, телевизор, кондиционер.</p>
+              <h2><strong>Люкс</strong></h2>
+              <p>Номер находится на первом этаже. Рассчитан на трех - четырех человек. В номере есть одна двухспальная кровать, две односпальные. Санузел внутри (душ+туалет). Так же дополнительно в номере холодильник, телевизор, кондиционер.</p>
             </div>
           </a>
         </div>
@@ -136,8 +137,8 @@
           <a href="#" class="thumbnail">
             <img src="source/img/semilux-room/room.jpg" alt="Основной вид">
             <div class="caption">
-              <h3>Полулюкс</h3>
-              <p>Номер находится на первом этаже. Рассчитан на двух - трех человек. В номере есть три односпальные кровати. Санузел внутри (душ+туалет). Так же допольнительно холодильник, телевизор. Возле номера есть личная терраса.</p>
+              <h2><strong>Полулюкс</strong></h2>
+              <p>Номер находится на первом этаже. Рассчитан на двух - трех человек. В номере есть три односпальные кровати. Санузел внутри (душ+туалет). Допольнительно так же  холодильник, телевизор. Возле номера есть личная терраса.</p>
             </div>
           </a>
         </div>
@@ -145,7 +146,7 @@
           <a href="#" class="thumbnail">
             <img src="source/img/standart-room/ordinary.jpg" alt="Часть комнаты">
             <div class="caption">
-              <h3>Стандарт</h3>
+              <h2><strong>Стандарт</strong></h2>
               <p>Номер находится на втором этаже. Рассчитан на двух человек. В номере есть две односпальные кровати. Так же в номере есть телевизор, вентилятор, тумбочка. На этаже холодильник, микроволновка. Санузел общий, находится на улице (душ+туалет).</p>
             </div>
           </a>
@@ -273,7 +274,9 @@
     <div class="container contacts-container">
       <div class="row">
         <div class="col-md-8">
-          <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=улица+Петропавловская+30,+Бердянск,+Запорожская+область,+Украина&key=AIzaSyCoP8Bg3VPHg3QqVL0cPwcvDfcTpOESL-U" allowfullscreen></iframe>
+          <div class="embed-responsive embed-responsive-4by3">
+            <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed/v1/search?q=улица+Петропавловская+30,+Бердянск,+Запорожская+область,+Украина&key=AIzaSyCoP8Bg3VPHg3QqVL0cPwcvDfcTpOESL-U" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="col-md-4">
           <div class="panel panel-default">
@@ -284,14 +287,15 @@
                 <strong>Viber:</strong> +38 (068) 177 25 85<br>
                 <strong>Skype:</strong> 100steps.org
               </address>
-              <form>
+              <form action="https://formspree.io/yanageraxl@gmail.com" method="GET">
                 <div class="form-group">
                   <label>Заполните поля для быстрой связи с нами:</label>
-                  <input type="text" class="form-control" id="inputName" placeholder="Имя">
-                  <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                  <input type="tel" class="form-control" id="inputPhone" placeholder="Телефон">
-                  <textarea class="form-control" rows="3"></textarea>
+                  <input type="text" class="form-control" id="inputName" placeholder="Имя" required>
+                  <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
+                  <input type="tel" class="form-control" id="inputPhone" title="+38(000)222-33-44" placeholder="+38 (000)222-33-44" required>
+                  <textarea class="form-control" placeholder="Текст сообщения" rows="5"></textarea>
                   <input class="btn btn-primary submit-btn" type="submit" value="Отправить"></input>
+                  <input class="btn btn-primary submit-btn" type="reset" value="Сбросить"></input>
                 </div>
               </form>
             </div>
