Added more changes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
+          <a href="#rooms" class="thumbnail">
             <img src="source/img/lux/lobby.jpg" alt="Люкс">
             <div class="caption">
               <h2><strong>Люкс</strong></h2>
@@ -134,7 +134,7 @@
           </a>
         </div>
         <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
+          <a href="#rooms" class="thumbnail">
             <img src="source/img/semilux-room/room.jpg" alt="Основной вид">
             <div class="caption">
               <h2><strong>Полулюкс</strong></h2>
@@ -143,7 +143,7 @@
           </a>
         </div>
         <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
+          <a href="#rooms" class="thumbnail">
             <img src="source/img/standart-room/ordinary.jpg" alt="Часть комнаты">
             <div class="caption">
               <h2><strong>Стандарт</strong></h2>
